# Deep-Manga-Translator

./: .gitignore  README.md  app.py  driver.py  pyproject.toml  requirements.txt
src/: driver.py  translation.py  utils.py
src/inpainter/: coarse_gan_inpainter.py
src/processor/: baseprocessor.py  bubble_seg_processor.py  combo_seg_processor.py  text_seg_processor.py
src/segmentation/: basemodel.py  bubble_seg.py  detectron_bubble_seg.py  pytorch_bubble_seg.py  text_seg.py
